# BugFlow

./: .gitignore  README.md  ROADMAP.md  bugflow.code-workspace
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: .env.example  Dockerfile  main.py
backend/app/api/: health.py  routes.py
backend/tests/: test_health.py
