[project]
name = "bugflow-backend"
version = "0.1.0"
description = "FastAPI backend for BugFlow"
authors = [
    { name = "adamdubsky33", email = "adamdubsky@gmail.com" }
]
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.13,<0.116.0",
    "uvicorn[standard]>=0.34.3,<0.35.0",
    "celery>=5.5.3,<6.0.0",
    "redis>=6.2.0,<7.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "boto3>=1.38.44,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0"
]

# This is required to point Poetry to the source folder
[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
