[tool.poetry]
name = "bugflow-backend"
version = "0.1.0"
description = "FastAPI backend for BugFlow"
authors = ["Adam Dubsky adamdubsky@gmail.com"]

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.1"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.24.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"

